[tool.poetry]
name = "graph"
version = "0.1.0"
description = "The graph service to rule them all!"
authors = ["Mikkel Nielsen <noxern@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
hug = "^2.6.1"
gunicorn = "^20.1.0"
cachetools = "^5.2.0"
plotly = "^5.10.0"
requests = "^2.28.1"
requests-html = "^0.10.0"
kaleido = "0.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
